sort.basic.cocktail.AlgCocktailSort1.scala.error
Compilation error:
AlgCocktailSort1:3: error: not found: value getNombresValeurs
  for (i <- 0 to getNombresValeurs()-2){
                 ^AlgCocktailSort1:8: error: not found: value getNombresValeurs
  for (i <- getNombresValeurs()-2 to 0 by -1){
            ^